--- a/frontend/explore.css
+++ b/frontend/explore.css
@@ -67,6 +67,7 @@ body{
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
     padding: 20px;
     position: fixed;
+    margin-top: 1px;
     top: 80px;
     left: 0;
     overflow-y: auto;
