--- a/frontend/style.css
+++ b/frontend/style.css
@@ -277,3 +277,66 @@ main .cta-button:hover {
   }
 }
 
+.profile-view{
+  position: absolute;
+  z-index: 1000;
+  top: 10%;
+  left: 78%;
+  width: 15%;
+  height: 40%;
+  border-radius: 10px;
+  /* display: grid; */
+  grid-template-rows: 30% 70%;
+  grid-template-columns: 100%;
+  background-color: white;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+  border: 1px solid #e0e0e0;
+  display: none;
+  overflow: hidden;
+}
+
+.profile-view.active{
+  display: grid;
+}
+
+.username{
+  border-bottom: 1px solid gray;
+  display: flex;
+  gap: 6px;
+  flex-direction: column;
+  padding: 14px;
+}
+.username h3{
+  font-size: 22px;
+  font-weight: 600;
+}
+.username p{
+  font-size: 16px;
+  font-weight: 500;
+}
+.data{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-left: 14px;
+  height: 100%;
+  width: 100%;
+}
+.detail{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+}
+.data i{
+  font-size: 20px;
+}
+
+.data:hover{
+  background-color: #f0f0f0;
+}
+.logout{
+  color: red;
+}
